--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,4 @@ jobs:
 
     # Rerun all tests a few times, to find intermittent issues
     - name: Test
-      env:
-        TEST_COMMAND: "go test -v -cover ./..."
-        LOOP_VAR: 0
-      run: for LOOP_VAR in `seq 0 10`; do eval $TEST_COMMAND; done
+      run: go test -v -cover ./... -count 10
