--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -10,6 +10,11 @@ jobs:
     name: Functional testing
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Python env
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8.5'
+          
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
 
@@ -17,6 +22,4 @@ jobs:
         run: docker-compose up -d
 
       - name: Python Pylin GitHub Action
-        uses: fylein/python-pytest-github-action@v1
-        with:
-          args: pip3 install -r test/requirements.txt && pytest test
+        run: pip3 install -r test/requirements.txt && pytest test
