--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -10,8 +10,8 @@ jobs:
     name: Functional testing
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Python env
-      - uses: actions/setup-python@v2
+      - name: Setup Python Env
+        uses: actions/setup-python@v2
         with:
           python-version: '3.8.5'
           
