--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Start test server
         run: docker-compose up -d
 
-      - name: Python Pylin GitHub Action
+      - name: Run functional test
         run: pip3 install -r test/requirements.txt && pytest test
