--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -22,4 +22,4 @@ jobs:
         run: docker-compose up -d
 
       - name: Run functional test
-        run: ifconfig && pip3 install -r test/requirements.txt && pytest test
+        run: pip3 install -r test/requirements.txt && pytest test
