--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -22,4 +22,4 @@ jobs:
         run: cp test/.env_functional_test .env && docker-compose up -d main-server
 
       - name: Run functional test
-        run: docker ps && docker logs --tail 500 main-server && ss -ntlp && pip3 install -r test/requirements.txt && pytest test
+        run: pip3 install -r test/requirements.txt && pytest -v test
