--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,35 @@ networks:
       - subnet: 172.18.0.0/24
 
 services:
-  system-mysql:
-    container_name: system-mysql
+  user-mysql:
+    container_name: ${USERS_MYSQL_DB_ADDRESS}
     image: mysql:8.0.21
     ports:
-      - ${MYSQL_DB_PORT}:${MYSQL_DB_PORT}
+      - ${USERS_MYSQL_DB_EXPOSED_PORT}:${USERS_MYSQL_DB_PORT}
     networks:
       - development
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_DB_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DB_NAME}
-  main-server:
-    build: ./
-    container_name: main-server
-    image: artofimagination/main-server
+      MYSQL_ROOT_PASSWORD: ${USERS_MYSQL_DB_PASSWORD}
+      MYSQL_DATABASE: ${USERS_MYSQL_DB_NAME}
+  user-db-server:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      args:
+        SERVER_PORT: ${USERS_SERVER_PORT}
+    container_name: user-db-server
+    image: artofimagination/user-db-server
     ports:
-      - "8080:8080"
+      - ${USERS_SERVER_PORT}:${USERS_SERVER_PORT}
     networks:
       - development
     depends_on: 
-      - system-mysql
+      - ${USERS_MYSQL_DB_ADDRESS}
+    environment:
+      SERVER_PORT: ${USERS_SERVER_PORT}
+      MYSQL_DB_ADDRESS: ${USERS_MYSQL_DB_ADDRESS}
+      MYSQL_DB_USER: ${USERS_MYSQL_DB_USER-root}
+      MYSQL_DB_PORT: ${USERS_MYSQL_DB_PORT}
+      MYSQL_DB_PASSWORD: ${USERS_MYSQL_DB_PASSWORD-123secure}
+      MYSQL_DB_NAME: ${USERS_MYSQL_DB_NAME-user_database}
+      MYSQL_DB_MIGRATION_DIR: ${USERS_MYSQL_DB_MIGRATION_DIR-$GOPATH/src/github.com/artofimagination/mysql-user-db-go-interface/db/migrations/mysql}
