Issue#53: Fixed system integration issues

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # MYSQL users
-USERS_MYSQL_DB_ADDRESS=user-mysql
 USERS_MYSQL_DB_EXPOSED_PORT=33061
 USERS_MYSQL_DB_PORT=3306
 USERS_MYSQL_DB_PASSWORD=123secure
@@ -7,4 +6,5 @@ USERS_MYSQL_DB_USER=root
 USERS_MYSQL_DB_MIGRATION_DIR=/go/src/mysql-user-db-go-interface/db/migrations/mysql
 USERS_MYSQL_DB_NAME=user_database
 
-USERS_SERVER_PORT=8180
+USER_DB_PORT=8180
+USER_DB_NAME=dummy-userdb
