--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -22,4 +22,4 @@ jobs:
         run: cp tests/.env.functional_test .env && docker-compose up -d user-db-server
 
       - name: Run functional test
-        run: ./curlTest.sh && docker ps && docker logs user-db-server
+        run: pip3 install -r tests/requirements.txt && pytest -v tests
