--- a/.github/workflows/functional-test.yml
+++ b/.github/workflows/functional-test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup Python Env
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8.10'
+          python-version: '3.8.5'
           
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
@@ -22,4 +22,4 @@ jobs:
         run: cp tests/.env.functional_test .env && docker-compose up -d user-db-server
 
       - name: Run functional test
-        run: ./curlTest.sh
+        run: pip3 install -r tests/requirements.txt && pytest -v tests
